src/css/main.css
@import "./reset.css";
@import "./colors.css";
@import "./spacing.css";

html {
  font-family: system-ui, sans-serif;
  background-color: var(--color-base);
  color: var(--color-base-l100);
  padding: 0;
  margin: 0;
  overflow: clip;
}

body {
  padding-block: var(--spacing-md);
  padding-inline: var(--spacing-md);
  margin: 0;
}

:focus {
  outline: none;
}

html,
body,
#root {
  height: -webkit-fill-available;
}

